2007-08-22  Jason Rumney  <jasonr@gnu.org>

	* vc-hooks.el (vc-menu-map-filter): Reapply 2007-08-06 bugfix.

2007-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-minor-mode): Use image-mode-text-map.

2007-08-22  Sean O'Rourke  <sorourke@cs.ucsd.edu>

	* dabbrev.el (dabbrev--progress-reporter): New variable.
	(dabbrev--scanning-message): Delete func.
	(dabbrev--find-expansion): Use a progress reporter
	instead of dabbrev--scanning-message.

2007-08-22  Michael Albinus  <michael.albinus@gmx.de>

	* comint.el (comint-exec-1): Raise an error if
	`start-file-process' does not return a process object.

	* shell.el (shell): Prompt for `default-directory' if it is a
	remote file name, and if called with a prefix arg.

2007-08-22  Sam Steingold  <sds@gnu.org>

	* pcvs.el (cvs-vc-command-advice): Fix a typo in code (file->files).

2007-08-22  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org-export-latex.el: New file.

	* textmodes/org-publish.el (org-publish-org-to-latex): New function.

	* textmodes/org.el (org-agenda-skip): Allow a form for
	`org-agenda-skip-function'.
	(org-agenda-redo): Re-use local settings.
	(org-agenda): Store local settings.
	(org-agenda-deadline-faces): New option.
	(org-agenda-deadline-face): New function.
	(org-agenda-get-deadlines, org-agenda-get-scheduled): Also handle
	entries on their due date.
	(org-agenda-get-timestamps): No longer handle the due dates of
	schedules and deadline items.
	(org-insert-link-global, org-open-at-point-global): New commands.
	(org-export-as-ascii): Call `org-cleaned-string-for-export' with a
	:for-ascii parameter.
	(org-skip-comments): Function removed.
	(org-cleaned-string-for-export): Handle special table lines.
	(org-global-properties): New option.
	(org-entry-get-with-inheritance): Check global properties.
	(org-local-properties): New variable.
	(org-set-regexps-and-options): Find the #+PROPERTY line.
	(org-link-types): Change type into variable (was constant).