@@ -1,3 +1,8 @@
+2007-08-23  John Wiegley  <johnw@newartisans.com>
+
+	* calendar/cal-bahai.el: Added in the diacriticals that were
+	missing for many of the month names.
+
 2007-08-22  Jason Rumney  <jasonr@gnu.org>
 
 	* vc-hooks.el (vc-menu-map-filter): Reapply 2007-08-06 bugfix.
